# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import bookingsRouter from "./bookings";
 import subscribersRouter from "./subscribers";
 import emailsRouter from "./emails";
 import dashboardRouter from "./dashboard";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(bookingsRouter);
 router.use(subscribersRouter);
 router.use(emailsRouter);
 router.use(dashboardRouter);
+router.use(settingsRouter);
 
 export default router;
