# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./services";
 export * from "./bookings";
 export * from "./subscribers";
 export * from "./email_campaigns";
+export * from "./settings";
